crud app on progress

--- a/views/Home.ejs
+++ b/views/Home.ejs
@@ -16,7 +16,7 @@
          <h5><%= post.submitTime %></h5>
          <h5><%= post.subject %></h5>
          <h5><%= post.topic %></h5>
-         <a href="href="/api/posts/next/<%="post.num"%> >next</a>
+         <a href="/api/posts/next/<%=post.id%>" >next</a>
         </div>
         <% }) %> 
 </body>
