--- a/views/check.ejs
+++ b/views/check.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
    <div>
-    <form action="/admin801840240834" method="post">
+    <form action="/admin" method="post">
        <input type="password" name="password">
         <button type="submit"> check </button>
     </form>
