--- a/views/check.ejs
+++ b/views/check.ejs
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   <div>
-    <form action="/admin" method="post">
-       <input type="password" name="password">
-        <button type="submit"> check </button>
-    </form>
+<%- include("partials/header"); -%>
+   <div class="checking">
+
+    <div class="box ">
+        <div class="inside-boxx">
+            <h3>Use email ( ngawanglm07@gmail.com ) and password ( ngawang ) to log in</h3>
+            <form action="/add-question" method="post">
+                <input type="email" name="email" placeholder="enter your email">
+               <input type="password" name="password" placeholder="enter your password">
+                <button type="submit"> check </button>
+            </form>
+
+       </div>
+    </div>
    </div>
-</body>
-</html>
+   <%- include("partials/footer"); -%>
