--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,36 +1,39 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Form with Various Items</title>
-</head>
-<body>
-    <form action="/" method="post" >
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title"><br><br>
+<%- include("partials/header"); -%>
 
-        <label for="questionText">Question Text:</label>
-        <textarea id="questionText" name="questionText"></textarea><br><br>
+<div class="box ">
+    <div class="inside-box">
+        <form action="/" method="post" >
+            <br>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title"><br><br>
+    
+            <label for="question">Question Text:</label>
+            <textarea id="question" name="question" rows="5" ></textarea><br><br>
+    
+            <label for="answer">Answer:</label>
+            <input type="text" id="answer" name="answer"><br><br>
+    
+            <label for="imageUpload">Image:</label>
+            <input type="file" id="imageUpload" name="imageUpload">
+           
+            <label for="url">URL:</label>
+            <input type="text" id="url" name="url"><br><br>
+    
+            <label for="submitTime">Submit Time:</label>
+            <input type="datetime-local" id="submitTime" name="submitTime"><br><br>
+    
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject"><br><br>
+    
+            <label for="topic">Topic:</label>
+            <input type="text" id="topic" name="topic"><br><br>
+    
+            <input type="submit" value="Submit" class="sub-btn">
+            <br>
 
-        <label for="answer">Answer:</label>
-        <input type="text" id="answer" name="answer"><br><br>
-
-        <label for="imageUpload">Image:</label>
-        <input type="file" id="imageUpload" name="imageUpload">
-       
-        <label for="url">URL:</label>
-        <input type="text" id="url" name="url"><br><br>
-
-        <label for="submitTime">Submit Time:</label>
-        <input type="datetime-local" id="submitTime" name="submitTime"><br><br>
-
-        <label for="subject">Subject:</label>
-        <input type="text" id="subject" name="subject"><br><br>
-
-        <label for="topic">Topic:</label>
-        <input type="text" id="topic" name="topic"><br><br>
-
-        <input type="submit" value="Submit">
-    </form>
-</body>
-</html>
+        </form>
+        <br>
+    </div>
+   </div>
+    <%- include("partials/footer"); -%>
 
