--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="navbar">
-            <a href="/home">Home</a>
+            <a href="/about">About</a>
             <a href="/login">Login</a>
             <a href="/">Questions</a>
         <a class="aa" href="https://www.linkedin.com/in/ngawang-pelden-lama-03b152221/">나왕 펠덴 라마</a>
