--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/css/index.css">
+   
     <title>Ngawang yonsei university</title>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="../../main.js"></script>
+    
 </head>
 <body>
     <div class="navbar">
@@ -26,9 +30,10 @@
                 <button class="searchbutton" type="submit">Search</button>
                </form>
                 
-              
-           
+            
         </div>
+
+ 
  
       
             
