--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,12 +18,16 @@
           <div class="subscribe">
           <p>Subscribe to our newsletter</p>
             <form  action="/email" method="post">
-              <input  type="email" name="email" placeholder="Your email">
-              <button type="submit">Subscribe</button>
+              <input  class="gg" type="email" name="email" placeholder="Your email">
+              <button  class="ggg" type="submit">Subscribe</button>
             </form>
           </div>
         </div>
       </footer>
+
+
+
+    
       
   
 </body>
