--- a/public/css/index.css
+++ b/public/css/index.css
@@ -310,8 +310,8 @@ button:hover {
 
 
   .utube {
-    height: 250px;
-    width: 450px;
+    height: 220px;
+    width: 100%;
     margin: 10px 0;
   }
 
